@@ -55,7 +55,7 @@ class ContentViewFeatured extends JView
 		JToolBarHelper::title(JText::_('Content_Featured_Title'), 'frontpage.png');
 
 		if ($canDo->get('core.create')) {
-			JToolBarHelper::custom('article.edit', 'new.png', 'new_f2.png', 'New', false);
+			JToolBarHelper::custom('article.add', 'new.png', 'new_f2.png', 'New', false);
 		}
 		if ($canDo->get('core.edit')) {
 			JToolBarHelper::custom('article.edit', 'edit.png', 'edit_f2.png', 'Edit', true);
